--- a/assets/worthy/css/custom.css
+++ b/assets/worthy/css/custom.css
@@ -11,3 +11,14 @@ File Description: Place here your custom CSS styles
 #map-canvas {
     height: 450px;
 }
+
+.info-map {
+    color: #000;
+    padding-left: 20px;
+}
+
+.info-map a {
+    color: #0976b4;
+    text-decoration: none;
+    font-weight: bold;
+}
